use new primary stylesheet

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,9 +25,9 @@
   <meta name="twitter:description" content="{{#unless metadata.description}}A trust and community-based lightweight social network.{{else}}{{metadata.description}}{{/unless}}">
   <meta name="twitter:image" content="{{#unless metadata.image}}https://sweet.sh/android-chrome-512x512.png{{else}}{{metadata.image}}{{/unless}}">
 
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!--<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
   <!-- <link rel="stylesheet" href="/css/reset.css"> -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style_with_stolen_bootstrap_stuff.css">
   <link rel="stylesheet" href="/css/navbar-icons.css">
   <link id="darkModeStylesheet" rel="stylesheet" href="">
 
