fix community directory images

--- a/public/css/style_with_stolen_bootstrap_stuff.css
+++ b/public/css/style_with_stolen_bootstrap_stuff.css
@@ -1442,6 +1442,8 @@ article.post>header .metadata {
 }
 
 .postAuthorImage {
+    width: 46px;
+    height: 46px;
     border-radius: 5px;
     display: inline;
     margin-right: 5px;
