--- a/public/css/style.css
+++ b/public/css/style.css
@@ -203,30 +203,107 @@ section.comments {
   background-color: #fff;
   border: 1px dashed #d5d5d5;
 }
-.two-images img,
-.three-images img,
-.four-images img {
-  border: 1px solid #eaeaea;
+
+/* ====== POST IMAGES ======= */
+
+/*
+STRUCTURE
+div.post-images > 1 or more (a > img.post-single-image)
+*/
+
+/* Base style for outside container */
+.post-images {
+  display: grid;
+  grid-column-gap: 2px;
+  grid-row-gap: 2px;
+  max-height: 450px;
 }
+
+/* Base style for individual images */
 .post-single-image {
-  border-bottom: 1px solid transparent;
+  transition: all 100ms ease-in;
+  border-radius: 4px;
+  border: 1px solid #ededed;
 }
-.post-images.two-images .post-single-image:hover,
-.post-images.three-images .post-single-image:hover,
-.post-images.four-images .post-single-image:hover {
-  border: 1px solid #9b9b9b;
+.post-images .post-single-image:hover {
+  border-color: #9b9b9b;
 }
-.post-images.one-image {
-  border: 1px solid transparent;
-  transition: border 100ms ease-in;
-      border-radius: 4px;
-}
-.post-images.one-image:hover {
-  border: 1px solid #9b9b9b;
-}
+
+/* One image */
 .post-images.one-image .post-single-image {
-    max-width: 100%;
+  max-width: 100%;
+  max-height: 450px;
+  grid-template-columns: 100%; /* Is this and the line below necessary? */
+  grid-template-rows: min-content;
 }
+
+/* Single vertical images are taller */
+.post-images.one-image.vertical-image {
+  max-height: 600px;
+}
+.post-images.one-image.vertical-image .post-single-image {
+  max-height: 600px;
+}
+
+/* Single horizontal images fill the whole box
+(currently images narrower than the box expand to fit which is not ideal but... okay) */
+.post-images.horizontal-image .post-single-image {
+  object-fit: cover;
+  width: 100%;
+}
+
+/* Two images */
+.post-images.two-images {
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 100%;
+}
+
+/* Three and four images */
+.post-images.three-images,
+.post-images.four-images {
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+.post-images.three-images > *:first-child {
+  grid-row-end: span 2;
+}
+
+/* Images in multi-image containers expand to fill their whole cell */
+.post-images.two-images .post-single-image,
+.post-images.three-images .post-single-image,
+.post-images.four-images .post-single-image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  max-height: 450px;
+}
+
+/* Hack of sorts to fit images to maximum height of multi-image container */
+.post-images a {
+  min-height: 100%;
+}
+
+.comment .content .post-images {
+    max-width: 450px;
+    max-height: 200px;
+}
+
+.comment .content .post-images.one-image {
+  display: inline-block;
+}
+.comment .content .post-images .post-single-image {
+    max-height: 200px;
+}
+
+.comment .content .post-images img.post-single-image.vertical-image {
+  max-height: 350px;
+}
+
+.comment .content .post-images.one-image.vertical-image {
+  max-height: 350px;
+}
+
+
 .image-clear {
   background-color: #ffffff99;
   color: #000000;
@@ -1051,113 +1128,6 @@ hr {
 .onthemove {
   transform: scale(.99);
   opacity: .75;
-}
-
-.post-images {
-  display: grid;
-  grid-column-gap: 2px;
-  grid-row-gap: 2px;
-  max-height: 450px;
-  margin-bottom: 10px;
-}
-
-.post-images.vertical-image {
-  max-height: 550px;
-}
-
-.post-images a {
-  min-height: 100%;
-}
-
-.post-single-image,
-.post-single-image > img {
-  object-fit: cover;
-  cursor: pointer;
-  width: 100%;
-  height: 100%;
-  max-height: 450px;
-  transition: border 100ms ease-in;
-  border-radius: 4px;
-}
-
-.post-single-image.vertical-image,
-.post-single-image.vertical-image > img {
-  max-height:550px;
-}
-
-@media (max-width: 500px){
-  .post-single-image,
-  .post-single-image > img {
-    max-height: 450px;
-  }
-  .post-single-image.vertical-image,
-  .post-single-image.vertical-image > img {
-    max-height:450px;
-  }
-}
-
-.post-images.one-image {
-  background-image: linear-gradient(45deg, #fff5f9 25%, #ffffff 25%, #ffffff 50%, #fff5f9 50%, #fff5f9 75%, #ffffff 75%, #ffffff 100%);
-  background-size: 5.66px 5.66px;
-  grid-template-columns: 100%;
-  grid-template-rows: min-content;
-}
-
-.post-images.one-image > img,
-.post-images.one-image > a {
-  height:auto;
-  text-align: center;
-}
-
-.one-image img.post-single-image{
-  object-fit: contain;
-}
-
-.post-images.two-images {
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 100%;
-}
-
-.post-images.three-images,
-.post-images.four-images {
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-}
-
-.post-images.three-images > *:first-child {
-  grid-row-end: span 2;
-}
-
-@media(max-width: 500px){
-  .post-images{
-    max-height:175px;
-  }
-  .post-images.one-image {
-    max-height:450px;
-  }
-  .post-single-image > img {
-    max-height: 450px;
-  }
-}
-
-.comment .content .post-images {
-    max-width: 450px;
-    max-height: 200px;
-}
-
-.comment .content .post-images.one-image {
-  display: inline-block;
-}
-.comment .content .post-images .post-single-image {
-    max-height: 200px;
-}
-
-.comment .content .post-images img.post-single-image.vertical-image {
-  max-height: 350px;
-}
-
-.comment .content .post-images.one-image.vertical-image {
-  max-height: 350px;
 }
 
 .community-container {
